--- a/src/main/webapp/unified.css
+++ b/src/main/webapp/unified.css
@@ -29,16 +29,24 @@
 	margin: 10px;
 	padding: 20px;
 }
-.suggestions p {
+.block p {
 	font: 12px/18px Arial, sans-serif;
 	color: #333;
 	margin: 0;
 }
-.suggestions{
+.block{
 	width: 22%;
-	position:relative;
-	border:black solid 1px;	
 	float: left;
 	margin: 10px;
-	padding:20px;
+        position: absolute;
+        background: #eee;
+        padding: 20px;
+        border: 1px solid #ddd;
+}
+.block {
+    -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
 }
